grammar.js
        program: $ => $._statements,

        //
        // Statements
        //
        _statements: $ => repeat1(seq($._statement, choice(";", /\n/))),

        _statement: $ =>
            choice(
                $.expression,
                $._declaration,
                $._loop_statement,
                $._branch_statement,
                $.labeled_statement,
                $._control_transfer_statement,
                $.defer_statement,
                $.do_statement,
                $._compiler_control_statement
            ),

        _condition: $ =>
            choice(
                field("expression_condition", $.expression),
                field("availability_condition", $.availability_condition),
                field("case_condition", $.case_condition),
                field("optional_binding_condition", $.optional_binding_condition)
            ),

        if_statement: $ =>
            seq("if", commaSep1($._condition), $._code_block, field("else_clause", optional($.else_clause))),

        diagnostic_statement: $ =>
            choice(
                seq("#error", "(", $._literal, ")"),
                seq("#warning", "(", $._literal, ")")
            ),

        availability_condition: $ =>
            seq("#available", "(", commaSep1($.availability_argument), ")"),

        availability_argument: $ =>
            choice(seq($._platform_name, alias($.number, $.platform_version)), "*"),

        _platform_name: $ =>
            choice(
                "iOS",
                "iOSApplicationExtension",
                "macOS",
                "macOSApplicationExtension",
                "macCatalyst",
                "macCatalystApplicationExtension",
                "watchOS",
                "tvOS"
            ),

        //
        // Expression
        //
        expression: $ =>
            seq(
                optional($._try_operator),
                choice(
                    seq(
                        optional(alias($.operator, $.prefix_operator)),
                        field("postfix_expression", $._postfix_expression)
                    ),
                    field("in_out_expression", $.in_out_expression),
                    field("binary_expression", $.binary_expression)
                ),
            ),

        in_out_expression: $ => seq("&", field("identifier", $.identifier)),

        _try_operator: $ => choice("try", seq("try", "?"), seq("try", "!")),

        binary_expression: $ =>
            seq(
                field("left", $.expression),
                choice(
                    seq(
                        alias($.operator, $.binary_operator),
                        field("right", $.expression)
                    ),
                    seq(
                        "=",
                        optional($._try_operator),
                        field("right", $.expression)
                    ),
                    seq(
                        "?",
                        $.expression,
                        ":",
                        optional($._try_operator),
                        $.expression
                    ),
                    field("type_cast", $.type_casting_operator)
                )
            ),

        array_literal: $ => seq("[", field("elements", commaSep($.expression)), optional(","), "]"),

        self: $ => token("self"),

        self_method_expression: $ => seq(field("subject", $.self), ".", field("member", $.identifier)),

        self_subscript_expression: $ =>
            seq(field("subject", $.self), "[", field("arguments", commaSep1($.function_call_argument)), "]"),

        self_initializer_expression: $ => seq(field("subject", $.self), ".", "init"),

        super: $ => token("super"),


        superclass_method_expression: $ => seq(field("subject", $.super), ".", field("member", $.identifier)),

        superclass_subscript_expression: $ =>
            seq(field("subject", $.super), "[", field("arguments", commaSep1($.function_call_argument)), "]"),

        superclass_initializer_expression: $ => seq(field("subject", $.super), ".", "init"),

        closure_expression: $ =>
            seq(
                "{",
                field("signature", optional($.closure_signature)),
                choice(
                    optional($._statements),
                    $._statement
                ),
                "}"
            ),

        closure_signature: $ =>
            choice(
                seq(
                    optional($.capture_list),
                    $.closure_parameter_clause,
                    optional("throws"),
                    optional($.function_result),
                    "in"
                ),
                seq($.capture_list, "in")
            ),

        closure_parameter_clause: $ =>
            choice(
                seq("(", ")"),
                seq("(", commaSep1($.closure_parameter), ")"),
                commaSep1($.identifier)
            ),

        implicit_member_expression: $ => seq(".", $.identifier),

        parenthesized_expression: $ => seq("(", $.expression, ")"),

        tuple_expression: $ =>
            choice(
                seq("(", ")"),
                seq("(", field("elements", commaSep1($.tuple_element)), ")")
            ),

        tuple_element: $ =>
            choice(
                   field("expression", $.expression),
                   seq($.identifier, ":", field("expression", $.expression))
            ),

        wildcard_expression: $ => "_",

        selector_expression: $ =>
            choice(
                seq("#selector", "(", $.expression, ")"),
                seq("#selector", "(", "getter:", $.expression, ")"),
                seq("#selector", "(", "setter:", $.expression, ")")
            ),

        key_path_string_expression: $ =>
            seq("#keyPath", "(", $.expression, ")"),

        _postfix_expression: $ =>
            choice(
                $._primary_expression,
                seq($._postfix_expression, alias($.operator, $.postfix_operator)),
                $.function_call_expression,
                $.initializer_expression,
                $.explicit_member_expression,
                $.postfix_self_expression,
                $.subscript_expression,
                $.forced_value_expression,
                $.optional_chaining_expression
            ),

        function_call_expression: $ =>
            seq(
                field("name", $._postfix_expression),
                choice(
                    field("arguments", $.function_call_argument_clause),
                    seq(
                        field("arguments", optional($.function_call_argument_clause)),
                        $.trailing_closures
                    )
                )
            ),


        function_call_argument_clause: $ =>
            choice(seq("(", ")"), seq("(", commaSep1($.function_call_argument), ")")),

        function_call_argument: $ =>
            choice(
                field("argument", $.expression),
                seq($.identifier, ":", field("argument", $.expression),),
                field("argument", $.operator),
                seq($.identifier, ":", field("argument", $.operator))
            ),

        initializer_expression: $ =>
            choice(
                seq($._postfix_expression, ".", "init"),
                seq(
                    $._postfix_expression,
                    ".",
                    "init",
                    "(",
                    repeat1($.argument_name),
                    ")"
                )
            ),

        explicit_member_expression: $ =>
            seq(
                field("subject", $._postfix_expression),
                ".",
                choice(
                    field("member", $.number),
                    field("member", $.identifier),
                    seq(
                        field("member", $.identifier),
                        "(",
                        repeat1($.argument_name),
                        ")"
                    )
                )
            ),

        postfix_self_expression: $ => seq($._postfix_expression, ".", "self"),

        subscript_expression: $ =>
            seq(
                field("subject", $._postfix_expression),
                "[",
                field("arguments", commaSep1($.function_call_argument)),
                "]"
            ),

        forced_value_expression: $ => seq(field("expression", $._postfix_expression), "!"),

        optional_chaining_expression: $ =>
            prec(PREC.OPTIONAL_TYPE, seq(field("expression", $._postfix_expression), "?")),

        _pattern: $ =>
            choice(
                seq($.wildcard_pattern, optional($.type_annotation)),
                seq($.identifier_pattern, optional($.type_annotation)),
                $.value_binding_pattern,
                seq($.tuple_pattern, optional($.type_annotation)),
                $.enum_case_pattern,
                $.optional_pattern,
                $.type_casting_pattern,
                $.expression
            ),

        identifier_pattern: $ => $.identifier,

        _code_block: $ => choice(
                              seq("{", "}"),
                              field("statements", seq("{", $._statements, "}")),
                              field("statements", seq("{", $._statement, "}"))
                          ),

        constant_declaration: $ =>
            seq(
                repeat($.attribute),
                repeat($._declaration_modifier),
                "let",
                commaSep1(field("pattern_initializer", $.pattern_initializer))
            ),

        pattern_initializer: $ => seq($._pattern, field("value", optional($.initializer))),

        initializer: $ => seq("=", $.expression),

        variable_declaration: $ =>
            choice(
                seq(
                    $.variable_declaration_head,
                    commaSep1(field("pattern_initializer", $.pattern_initializer))
                ),
                seq(
                    $.variable_declaration_head,
                    $.identifier,
                    $.type_annotation,
                    $._code_block
                ),
                seq(
                    $.variable_declaration_head,
                    $.identifier,
                    $.type_annotation,
                    $.getter_setter_block
                ),
                seq(
                    $.variable_declaration_head,
                    $.identifier,
                    $.type_annotation,
                    $.getter_setter_keyword_block
                ),
                seq(
                    $.variable_declaration_head,
                    $.identifier,
                    $.initializer,
                    $.willSet_didSet_block
                ),
                seq(
                    $.variable_declaration_head,
                    $.identifier,
                    $.type_annotation,
                    optional($.initializer),
                    $.willSet_didSet_block
                )
            ),

        variable_declaration_head: $ =>
            seq(
                repeat($.attribute),
                repeat($._declaration_modifier),
                "var"
            ),

        getter_setter_keyword_block: $ =>
            choice(
                seq(
                    "{",
                    $.getter_keyword_clause,
                    optional($.setter_keyword_clause),
                    "}"
                ),
                seq("{", $.setter_keyword_clause, $.getter_keyword_clause, "}")
            ),

        getter_keyword_clause: $ =>
            seq(repeat($.attribute), optional($._mutation_modifier), "get"),

        typealias_declaration: $ =>
            seq(
                repeat($.attribute),
                optional($._access_level_modifier),
                "typealias",
                $._typealias_name,
                optional($.generic_parameter_clause),
                $.typealias_assignment
            ),

        _typealias_name: $ => $.identifier,

        typealias_assignment: $ => seq("=", $._type),

        function_declaration: $ =>
            seq(
                $.function_head,
                field("name", $.function_name),
                optional($.generic_parameter_clause),
                $._function_signature,
                optional($.generic_where_clause),
                $._code_block
            ),

        function_head: $ =>
            seq(
                repeat($.attribute),
                repeat($._declaration_modifier),
                "func"
            ),

        function_name: $ => choice($.identifier, $.operator),

        _function_signature: $ =>
            choice(
                seq(
                    $._parameter_clause,
                    optional("throws"),
                    optional($.function_result)
                ),
                seq($._parameter_clause, "rethrows", optional($.function_result))
            ),

        _parameter_clause: $ =>
            choice(
                seq("(", ")"),
                seq("(", commaSep1(field("parameters", $.parameter)), ")")
            ),

        parameter: $ =>
            choice(
                seq(
                    optional(alias($.identifier, $.external_parameter_name)),
                    field("identifier", $.identifier),
                    $.type_annotation,
                    optional($._default_argument_clause)
                ),
                seq(
                    optional(alias($.identifier, $.external_parameter_name)),
                    field("identifier", $.identifier),
                    $.type_annotation
                ),
                seq(
                    optional(alias($.identifier, $.external_parameter_name)),
                    field("identifier", $.identifier),
                    $.type_annotation,
                    "..."
                )
            ),

        _default_argument_clause: $ => seq("=", $.expression),

        struct_declaration: $ =>
            seq(
                repeat($.attribute),
                optional($._access_level_modifier),
                "struct",
                field("struct_name", $.identifier),
                optional($.generic_parameter_clause),
                field("type_inheritance_clause", optional($.type_inheritance_clause)),
                optional($.generic_where_clause),
                field("body", $.struct_body)
            ),

        struct_body: $ => seq("{", repeat($._struct_member), "}"),

        _struct_member: $ =>
            choice($._declaration, $._compiler_control_statement),

        class_declaration: $ =>
            choice(
                seq(
                    repeat($.attribute),
                    optional($._access_level_modifier),
                    optional("final"),
                    "class",
                    field("class_name", $.identifier),
                    optional($.generic_parameter_clause),
                    field("type_inheritance_clause", optional($.type_inheritance_clause)),
                    optional($.generic_where_clause),
                    field("body", $.class_body)
                ),
                seq(
                    repeat($.attribute),
                    "final",
                    optional($._access_level_modifier),
                    "class",
                    field("class_name", $.identifier),
                    optional($.generic_parameter_clause),
                    field("type_inheritance_clause", optional($.type_inheritance_clause)),
                    optional($.generic_where_clause),
                    field("body", $.class_body)
                )
            ),

        class_body: $ => seq("{", repeat($._class_member), "}"),

        _class_member: $ =>
            choice($._declaration, $._compiler_control_statement),

        init: $ => token("init"),
