corpus/keywords.txt
======
diagnostic statements - #error
======

#error("error message")
#warning("warning message")

---

(program
  (diagnostic_statement
    (string_literal))
  (diagnostic_statement
    (string_literal)))

======
availability condition
======

if #available(iOS 13.0, *) {}
if #available(iOS 13.0, macOS 10.15.1) {}
if #available(iOS 13.0, macOS 10.15, watchOS 6.0.1, *) {}
if #available(*) {}

---

(program
  (if_statement
    availability_condition: (availability_condition
      (availability_argument
        (platform_version
          (number)))
      (availability_argument)))
  (if_statement
    availability_condition: (availability_condition
      (availability_argument
        (platform_version
          (number)))
      (availability_argument
        (platform_version
          (number)
          (number)))))
  (if_statement
    availability_condition: (availability_condition
      (availability_argument
        (platform_version
          (number)))
      (availability_argument
        (platform_version
          (number)))
      (availability_argument
        (platform_version
          (number)
          (number)))
      (availability_argument)))
  (if_statement
    availability_condition: (availability_condition
      (availability_argument))))
