corpus/structs.txt
======
Empty struct
======

struct A {}

---

(program
  (struct_declaration
    struct_name: (identifier)
    body: (struct_body)))

======
Public struct
======

public struct A {}

---

(program
  (struct_declaration
    struct_name: (identifier)
    body: (struct_body)))
