test/corpus/classes.txt
======
Empty class
======

internal class A {}

---

(program
  (class_declaration
    class_name: (identifier)
    body: (class_body)))

======
Class with an empty deinitializer
======

public final class C {
	deinit {}
}

---

(program
  (class_declaration
    class_name: (identifier)
    body: (class_body
      (deinitializer_declaration
        keyword: (deinit)))))

======
Final class
======

public final class C { }

---

(program
  (class_declaration
    class_name: (identifier)
    body: (class_body)))

======
Open class
======

open class C { }

---

(program
  (class_declaration
    class_name: (identifier)
    body: (class_body)))

======
Class with a private and fileprivate functions
======

public final class C {
  var foo: Any = bar
  let baz: Int

  func biz() {}
}

---

(program
  (class_declaration
    class_name: (identifier)
    body: (class_body
      (variable_declaration
        (variable_declaration_head)
        pattern_initializer: (pattern_initializer
          (identifier_pattern
            (identifier))
          (type_annotation
            (any_type))
          value: (initializer
            (expression
              postfix_expression: (identifier)))))
      (constant_declaration
        pattern_initializer: (pattern_initializer
          (identifier_pattern
            (identifier))
          (type_annotation
            (type_identifier
              identifier: (identifier)))))
      (function_declaration
        (function_head)
        name: (function_name
          (identifier))))))
